# polars-fastjson

./: .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
benches/: __init__.py  main.py
crates/polars-fastjson/: Cargo.toml  README.md
crates/polars-fastjson-plugin/: Cargo.toml
crates/polars-fastjson-plugin/src/: lib.rs
crates/polars-fastjson/src/: diagnostics.rs  dtype.rs  error.rs  ir.rs  lib.rs  parse.rs
crates/polars-fastjson/src/decode/: coerce.rs  list.rs  mod.rs  required.rs  scalar.rs  struct_.rs
crates/polars-fastjson/tests/: decode.rs  dtype.rs  nested_leniency.rs
examples/: basic.py  heterogeneous.py  schema_sources.py
python/polars_fastjson/: __init__.py  _lib.py  _typing.py  api.py
python/polars_fastjson/schema/: __init__.py  from_dataclass.py  from_polars.py  from_pydantic.py  from_typeddict.py  ir.py
tests/: test_decode_basic.py  test_import.py  test_nested_leniency.py  test_schema_from_dataclass.py  test_schema_from_polars.py  test_schema_from_pydantic.py  test_schema_from_typeddict.py  test_when_then_pattern.py
