[workspace]
members = ["crates/polars-fastjson", "crates/polars-fastjson-plugin"]
resolver = "3"

[workspace.package]
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/guywaldman/polars-fastjson"

[workspace.dependencies]
polars-core = { version = "0.52", default-features = false, features = ["dtype-struct", "dtype-decimal", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "zip_with", "timezones", "dtype-datetime", "dtype-date", "dtype-time", "dtype-duration"] }
polars = { version = "0.52", default-features = false, features = ["dtype-struct", "dtype-decimal", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "zip_with", "timezones", "dtype-datetime", "dtype-date", "dtype-time", "dtype-duration"] }
polars-lazy = { version = "0.52", default-features = false, features = ["python"] }
pyo3-polars = { version = "0.25", default-features = false, features = ["derive"] }
pyo3 = "0.26"
serde = { version = "1", features = ["derive"] }
simd-json = { version = "0.17", default-features = false, features = ["runtime-detection", "swar-number-parsing"] }
polars-fastjson = { path = "crates/polars-fastjson" }
