[package]
name = "polars-fastjson-plugin"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
polars-fastjson = { path = "../polars-fastjson" }
pyo3-polars.workspace = true
pyo3.workspace = true
polars.workspace = true
polars-lazy.workspace = true
serde.workspace = true
